--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+	<script src="firebase.js"></script>
+<script src="app.js"></script>
 <meta charset="UTF-8" />
 <title>Study Tracker Concurso</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
