login com firebase

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+
   <title>Study Tracker Concurso</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
@@ -15,6 +16,8 @@
 </head>
 <body>
 
+<button onclick="login()">Login com Google</button>
+<button onclick="logout()">Logout</button>
 <h1>📚 Study Tracker</h1>
 
 <section>
@@ -33,6 +36,7 @@
 <!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 
 <script src="firebase.js"></script>
 <script src="app.js"></script>
